--- a/structure.html
+++ b/structure.html
@@ -1,7 +1,7 @@
 <html lang="eng">
 <head>
     <title>Predail</title>
-    <link rel="stylesheet" href="C:\Users\shada\Documents\Lab Excercises\Predail\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav>
@@ -12,7 +12,7 @@
     <a href="#">Help Center</a>
   </div>
   <div>
-    <img src="C:\Users\shada\Documents\Lab Excercises\Predail\artificial-intelligence_8055576.png" alt="AI Icon">
+    <img src="artificial-intelligence_8055576.png" alt="AI Icon">
 </div>
 <div>
     <button>SIGN UP</button>
@@ -30,7 +30,7 @@
         </div>
        </div>
         <div id="main-img">
-            <img src="C:\Users\shada\Documents\Lab Excercises\Predail\black-cat-png-30352.png" alt="Penguin">
+            <img src="black-cat-png-30352.png" alt="Penguin">
         </div>
     </div>
     <div id="main-2">
@@ -42,6 +42,12 @@
             <h5>BUILDER</h5>
         </div>
     </div>
+      <div id="circles">
+      <div id="circle1"></div>
+      <div id="circle2"></div>
+      <div id="circle3"></div>
+    </div>
+
 </section>
 <section id="links-menu">
     <a href="#">SEQULA</a>
@@ -56,7 +62,8 @@
 </section>
 <section id="last">
     <div id="inner"></div>
-    <img src="C:\Users\shada\Documents\Lab Excercises\Predail\icons8-javascript-48.png" alt="JS Icon">
+    <img id = "js" src="icons8-javascript-48.png" alt="JS Icon">
+    <img id="arrow" src="arrow-circle-up-right.512x512.png" alt="Arrow">
     <a href="#">Web Development & Visual</a>
 </section>
 
